QA-Project/force-app/main/default/objects/Course_nvoices__c/Course_nvoices__c.object-meta.xml
<CustomObject>
    <label>Course Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>