QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Autonumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autonumber</label>
    <referenceTo>Autonumber__c</referenceTo>
    <relationshipLabel>Course Invoices</relationshipLabel>
    <relationshipName>Course_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>