QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Course_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Course_Opportunity__c</fullName>
    <label>Course Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Course_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>