QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Expense_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Expense_Subtotal__c</fullName>
    <label>Expense Subtotal</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.ServiceandExpenseInvoiceMDR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>