QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Expense_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total_Cost__c</fullName>
    <formula>Expense_Mileage_Subtotal__c + Expense_Subtotal__c +  Expense_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>