QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Expense_VAT__c.field-meta.xml
<CustomField>
    <fullName>Expense_VAT__c</fullName>
    <formula>(Expense_Subtotal__c +  Expense_Mileage_Subtotal__c ) *  VAT_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>