QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Expense_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Withdrawal_Amount__c</fullName>
    <formula>Expense_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>