QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <formula>Invoice_Submitted_Date__c  + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>