QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Invoice_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Date__c</fullName>
    <label>Invoice Paid Date</label>
    <type>Date</type>
</CustomField>