QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Invoice_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted_Date__c</fullName>
    <label>Invoice Submitted Date</label>
    <type>Date</type>
</CustomField>