QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <formula>Invoice_Line_Item__r.Mileage_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>