QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Hourly_Rate__c</fullName>
    <label>Service Hourly Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>