QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_Invoice_Amount_test__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Amount_test__c</fullName>
    <label>Service Invoice Amount test</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>