QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Number__c</fullName>
    <displayFormat>SERINV-{000}</displayFormat>
    <label>Service Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>