QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Service_Subtotal__c</fullName>
    <formula>Service_Hourly_Rate__c  *  Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>