QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Service_Total_Cost__c</fullName>
    <formula>Service_Subtotal__c  +  Service_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>