QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Service_VAT__c.field-meta.xml
<CustomField>
    <fullName>Service_VAT__c</fullName>
    <formula>Service_Subtotal__c *  VAT_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>