QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Tax_Retention_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Retention_Percentage__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Tax Retention Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>