QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>Invoice_Line_Item__c.Hours__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.ServiceandExpenseInvoiceMDR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>