QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/VAT_Value__c.field-meta.xml
<CustomField>
    <fullName>VAT_Value__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>VAT Value</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>