QA-Project/force-app/main/default/objects/Course_nvoices__c/fields/Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Amount__c</fullName>
    <formula>IF( ISPICKVAL( Invoice_Status__c , &quot;paid&quot;) , Service_Subtotal__c * (1 - Tax_Retention_Percentage__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>