QA-Project/force-app/main/default/objects/Course_nvoices__c/recordTypes/Expense_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Expense_Invoice</fullName>
    <active>true</active>
    <description>Create an expense invoice</description>
    <label>Expense Invoice</label>
</RecordType>