QA-Project/force-app/main/default/objects/Course_nvoices__c/recordTypes/Service_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Service_Invoice</fullName>
    <active>true</active>
    <description>Create a service invoice</description>
    <label>Service Invoice</label>
</RecordType>