QA-Project/force-app/main/default/objects/Course_nvoices__c/validationRules/Change_to_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_to_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Invoice_Status__c, &quot;Paid&quot;) &amp;&amp; ISNULL( Invoice_Paid_Date__c)</errorConditionFormula>
    <errorMessage>Change status to paid: - Invoice Paid Date REQUIRED</errorMessage>
</ValidationRule>