QA-Project/force-app/main/default/objects/Course_nvoices__c/validationRules/Change_to_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_to_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Invoice_Status__c  , &quot;Submitted&quot;) &amp;&amp; ( ISNULL(Invoice_Submitted_Date__c))</errorConditionFormula>
    <errorMessage>Changing status to submitted : - Invoice Submitted Date REQUIRED</errorMessage>
</ValidationRule>