QA-Project/force-app/main/default/objects/Course_nvoices__c/validationRules/Date_in_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_in_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Invoice_Submitted_Date__c &gt; TODAY() ||  Invoice_Paid_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Cannot enter Invoice Submitted Date or Invoice Paid Date in the future!</errorMessage>
</ValidationRule>