QA-Project/force-app/main/default/objects/Course_nvoices__c/listViews/Formatted_Invoices.listView-meta.xml
<ListView>
    <fullName>Formatted_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Expense_Total_Cost__c</columns>
    <columns>Service_Total_Cost__c</columns>
    <columns>Withdrawal_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Formatted Invoices</label>
</ListView>